manifests/kong-mesh-2.7.3.tgz-manifest.yaml
---
# Source: kong-mesh/charts/kuma/templates/cp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-mesh-control-plane
  namespace: default
  labels: 
    app: kong-mesh-control-plane
    helm.sh/chart: kuma-2.7.3
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.7.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/port: "5680"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 5680
      name: diagnostics
      appProtocol: http
    - port: 5681
      name: http-api-server
      appProtocol: http
    - port: 5682
      name: https-api-server
      appProtocol: https
    - port: 443
      name: https-admission-server
      targetPort: 5443
      appProtocol: https
    - port: 5676
      name: mads-server
      appProtocol: https
    - port: 5678
      name: dp-server
      appProtocol: https
  selector:
    app: kong-mesh-control-plane
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: my-release
---
# Source: kong-mesh/charts/kuma/templates/cp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-mesh-control-plane
  namespace: default
  labels: 
    app: kong-mesh-control-plane
    helm.sh/chart: kuma-2.7.3
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.7.3"
    app.kubernetes.io/managed-by: Helm
  annotations: 
    
spec:
  replicas: 1
  minReadySeconds: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kong-mesh
      app.kubernetes.io/instance: my-release
      app: kong-mesh-control-plane
  template:
    metadata:
      annotations:
        checksum/config: 8bc0539644dcd2a231845c4c276ce841eda064b0a31c9d811df25c39a351cb75
        checksum/tls-secrets: 644fdd93f576d1e680ebe7600f367df4fcc973fb0ee86cc8e4911b8c1203f2c9
      labels: 
        app: kong-mesh-control-plane
        helm.sh/chart: kuma-2.7.3
        app.kubernetes.io/name: kong-mesh
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "2.7.3"
        app.kubernetes.io/managed-by: Helm
    spec:
      affinity: 
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - 'kong-mesh'
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - 'my-release'
                - key: app
                  operator: In
                  values:
                  - 'kong-mesh-control-plane'
              topologyKey: kubernetes.io/hostname
            weight: 100
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kong-mesh-control-plane
      automountServiceAccountToken: true
      nodeSelector:
        
        kubernetes.io/os: linux
      hostNetwork: false
      terminationGracePeriodSeconds: 30
      containers:
        - name: control-plane
          image: "docker.io/kong/kuma-cp:2.7.3"
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          args:
            - run
            - --log-level=info
            - --log-output-path=
            - --config-file=/etc/kuma.io/kuma-control-plane/config.yaml
          ports:
            - containerPort: 5680
              name: diagnostics
              protocol: TCP
            - containerPort: 5681
            - containerPort: 5682
            - containerPort: 5443
            - containerPort: 5678
          livenessProbe:
            timeoutSeconds: 10
            httpGet:
              path: /healthy
              port: 5680
          readinessProbe:
            timeoutSeconds: 10
            httpGet:
              path: /ready
              port: 5680
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 256Mi
          
          volumeMounts:
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert/tls.crt
              subPath: tls.crt
              readOnly: true
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert/tls.key
              subPath: tls.key
              readOnly: true
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert/ca.crt
              subPath: ca.crt
              readOnly: true
            - name: kong-mesh-control-plane-config
              mountPath: /etc/kuma.io/kuma-control-plane
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: general-tls-cert
          secret:
            secretName: kong-mesh-tls-cert
        - name: kong-mesh-control-plane-config
          configMap:
            name: kong-mesh-control-plane-config
        - name: tmp
          emptyDir: {}
---
# Source: kong-mesh/charts/kuma/templates/cp-webhooks-and-secrets.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kong-mesh-admission-mutating-webhook-configuration
  namespace: default
  labels: 
    app: kong-mesh-control-plane
    helm.sh/chart: kuma-2.7.3
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.7.3"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mesh.defaulter.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /default-kuma-io-v1alpha1-mesh
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - meshes
          - meshgateways
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshglobalratelimits
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshopas
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtraces
          - meshtrafficpermissions
          - meshservices
    sideEffects: None
  - name: owner-reference.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /owner-reference-kuma-io-v1alpha1
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - circuitbreakers
          - externalservices
          - faultinjections
          - healthchecks
          - meshgateways
          - meshgatewayroutes
          - proxytemplates
          - ratelimits
          - retries
          - timeouts
          - trafficlogs
          - trafficpermissions
          - trafficroutes
          - traffictraces
          - virtualoutbounds
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshglobalratelimits
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshopas
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtraces
          - meshtrafficpermissions
          - meshservices
  
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - opapolicies
      
    sideEffects: None
  - name: namespace-kuma-injector.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
        - key: kuma.io/sidecar-injection
          operator: In
          values: ["enabled", "true"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /inject-sidecar
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - name: pods-kuma-injector.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
    objectSelector:
      matchLabels:
        kuma.io/sidecar-injection: enabled
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /inject-sidecar
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
---
# Source: kong-mesh/charts/kuma/templates/cp-webhooks-and-secrets.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kong-mesh-validating-webhook-configuration
  namespace: default
  labels: 
    app: kong-mesh-control-plane
    helm.sh/chart: kuma-2.7.3
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.7.3"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /validate-kuma-io-v1alpha1
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - circuitbreakers
          - dataplanes
          - externalservices
          - faultinjections
          - gatewayinstances
          - healthchecks
          - meshes
          - meshgateways
          - meshgatewayroutes
          - proxytemplates
          - ratelimits
          - retries
          - trafficlogs
          - trafficpermissions
          - trafficroutes
          - traffictraces
          - virtualoutbounds
          - zones
          - containerpatches
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshglobalratelimits
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshopas
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtraces
          - meshtrafficpermissions
          - meshservices
    
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - opapolicies
          - accessaudits
          - accessroles
          - accessrolebindings
      
    sideEffects: None
  - name: service.validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /validate-v1-service
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - services
    sideEffects: None
  - name: secret.validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    namespaceSelector:
      matchLabels:
        kuma.io/system-namespace: "true"
    failurePolicy: Ignore
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /validate-v1-secret
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - secrets
    sideEffects: None
  - name: gateway.validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU1iZHVYSUVZYjEwQzZXc2VPSW5QT1F3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlOREEyTVRVeU16VXhORFZhRncwek5EQTJNVE15TXpVeApORFZhTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFEUldRdXNnNFVPZW1KQjNRY3Nnc3lhVXRwdUFoZWtvcllpNVRUVk9mOFM1MUJZM0RzNVk4bXUKQXNDNkUxMVdvRHFxV3A0QjF1TUtwL1N2RC9iTmc4Q3JRaWdzcFVBd3BjVEExcUd3YnRrVHFmNkFlSVNwelo4cwpZczdRM1BHa0do [...]
      service:
        namespace: default
        name: kong-mesh-control-plane
        path: /validate-gatewayclass
    rules:
      - apiGroups:
          - "gateway.networking.k8s.io"
        apiVersions:
          - v1beta1
        operations:
          - CREATE
        resources:
          - gatewayclasses
    sideEffects: None
